--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,1 +1,22 @@
-<h1>Articles</h1>
+<h1>Listing Articles</h1>
+<table>
+  <tr>
+    <th>
+      Title
+    </th>
+    <th>
+      Description
+    </th>
+  </tr>
+
+  <% @articles.each do |article|  %>
+    <tr>
+      <td>
+        <%= article.title %>
+      </td>
+      <td>
+        <%= article.description %>
+      </td>
+    </tr>
+  <% end %>
+</table>
