--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Listing Articles</h1>
+<p>
+  <%= link_to 'Create new article', new_article_path %>
+</p>
 <table>
   <tr>
     <th>
@@ -16,6 +19,15 @@
       </td>
       <td>
         <%= article.description %>
+      </td>
+      <td>
+        <%= link_to 'show', article_path(article) %>
+      </td>
+      <td>
+        <%= link_to 'edit', edit_article_path(article) %>
+      </td>
+      <td>
+        <%= link_to 'delete', article_path(article) %>
       </td>
     </tr>
   <% end %>
