--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -27,7 +27,7 @@
         <%= link_to 'edit', edit_article_path(article) %>
       </td>
       <td>
-        <%= link_to 'delete', article_path(article) %>
+        <%= link_to 'delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"} %>
       </td>
     </tr>
   <% end %>
