--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>This is home page</h1>
-<%= link_to "Kevin's Blog", articles_path %> | <%= link_to 'About', about_path %>
+<div class="center jumbotron">
+  <h1>KEVIN'S BLOG</h1>
+  <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
+  <%= link_to 'article', articles_path %>
+</div>
