--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,3 @@
-<h1>Editing existing article</h1>
+<h1 align="center">Editing existing article</h1>
 
 <%= render 'form' %>
-
-<%= link_to "Back to articles", articles_path %>
