--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,3 @@
-<h1>Create a new article</h1>
+<h1 align="center">Create a new article</h1>
 
 <%= render 'form' %>
-
-<%= link_to "Back to articles", articles_path %>
