--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sx-8 col-xs-offset-1">
+  <div class="col-sx-8 col-xs-offset-1 col-xs-offset-right-1">
     <% flash.each do |name, msg| %>
     <div class='alert alert-<%= "#{name}" %> fade in'>
       <a href="#" class="close" data-dismiss="alert">&#215;</a>
