--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -63,6 +63,11 @@ $navbar-default-bg: black;
   margin-right: 10%;
 }
 
+.listing {
+  list-style: none;
+  padding-left: 0;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
