update home page photo

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,9 +22,9 @@ $navbar-default-bg: black;
 }
 
 .jumbotron {
-  background-image: asset-url('ladybird-webpage-background.jpg');
+  background-image: asset-url('cat.jpg');
   background-size: cover;
-  height: 900px;
+  height: 550px;
 }
 
 .jumbotron h1 {
