--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,6 +39,8 @@ $navbar-default-bg: black;
 .article-meta-details {
   border-top: 1px solid #eaeaea;
   margin-top: 15px;
+  color: #c49507;
+  font-style: italic;
 }
 
 .article-actions {
