--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -72,6 +72,20 @@ $navbar-default-bg: black;
   padding-left: 0;
 }
 
+.badge {
+  background-color: #6120a3;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+}
+
+.badge a {
+  color: #fcfcfc;
+}
+
+.input_checkbox input {
+  width: auto !important;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
