add update category function

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,6 +76,7 @@ $navbar-default-bg: black;
   background-color: #6120a3;
   text-transform: uppercase;
   letter-spacing: -1px;
+  margin-bottom: 10px;
 }
 
 .badge a {
