--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,10 @@
 <h1 align="center"><%= "Category: " + @category.name %></h1>
+
+<% if logged_in? && current_user.admin? %>
+  <div class="row center">
+    <span class="badge"><%= link_to "Edit category name", edit_category_path(@category) %></span>
+  </div>
+<% end %>
 <div align="center">
   <%= will_paginate @category_articles %>
 </div>
