--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,7 +22,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <!-- <li><a href="#">Action</a></li> -->
-              <li><%= link_to "New Article", new_article_path %></li>
+              <li><%= link_to "Create New Article", new_article_path %></li>
               <li><a href="#">Another action</a></li>
               <li><a href="#">Something else here</a></li>
               <li role="separator" class="divider"></li>
@@ -47,14 +47,15 @@
             <% end %>
          </ul>
        </li>
-
       </ul>
-      <form class="navbar-form navbar-left">
+
+      <form target="_blank" class="navbar-form navbar-left" action='https://www.google.com/'  method="get">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Link to google">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li><%= link_to 'Log out', logout_path, method: :delete, data: { confirm: "Are you sure want to log out?"} %></li>
