get rid of search bar

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -49,12 +49,12 @@
        </li>
       </ul>
 
-      <form target="_blank" class="navbar-form navbar-left" action='https://www.google.com/'  method="get">
+      <!-- <form target="_blank" class="navbar-form navbar-left" action='https://www.google.com/'  method="get">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Link to google">
+          <input type="text" class="form-control" placeholder="search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form> -->
 
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
