--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,11 +18,12 @@
         <li><%= link_to "Articles", articles_path %></li>
         <li><%= link_to "Users", users_path %></li>
         <% if logged_in? %>
-          <li class="dropdown">
+          <li><%= link_to "Create New Article", new_article_path %></li>
+          <!-- <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions<span class="caret"></span></a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu"> -->
               <!-- <li><a href="#">Action</a></li> -->
-              <li><%= link_to "Create New Article", new_article_path %></li>
+              <!-- <li><%= link_to "Create New Article", new_article_path %></li>
               <li><a href="#">Another action</a></li>
               <li><a href="#">Something else here</a></li>
               <li role="separator" class="divider"></li>
@@ -30,7 +31,7 @@
               <li role="separator" class="divider"></li>
               <li><a href="#">One more separated link</a></li>
             </ul>
-          </li>
+          </li> -->
        <% end %>
 
        <li class="dropdown">
