adjust space between edit category and articles

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,7 +76,6 @@ $navbar-default-bg: black;
   background-color: #6120a3;
   text-transform: uppercase;
   letter-spacing: -1px;
-  margin-bottom: 10px;
 }
 
 .badge a {
@@ -85,6 +84,10 @@ $navbar-default-bg: black;
 
 .input_checkbox input {
   width: auto !important;
+}
+
+.category {
+  margin-bottom: 10px;
 }
 
 footer {
