--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 <h1 align="center"><%= "Category: " + @category.name %></h1>
 
 <% if logged_in? && current_user.admin? %>
-  <div class="row center">
+  <div class="row center category">
     <span class="badge"><%= link_to "Edit category name", edit_category_path(@category) %></span> <span class="badge"><%= link_to "Delete category", category_path(@category), method: :delete %></span>
   </div>
 <% end %>
