update the restriction for article controller, add ajax function for showing the comment form

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,6 +43,12 @@ $navbar-default-bg: black;
   font-style: italic;
 }
 
+.comment-meta-details {
+  margin-top: 5px;
+  color: #c49507;
+  font-style: italic;
+}
+
 .article-actions {
   border-top: 1px solid #eaeaea;
   padding-top: 5px;
