--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,10 +2,9 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <%= form_for([@article_comment.article,@article_comment], :html => {class: "form-horizontal", role: "form" }) do |f| %>
+    <%= form_for([@article_comment.article, @article_comment], :html => {class: "form-horizontal", role: "form" }, remote: true) do |f| %>
 
       <div class="form-group">
-
         <div class="col-sm-12">
           <%= f.text_area :content, rows: 5, class: "form-control", placeholder: "Your comment here", autofocus: true  %>
         </div>
