fix the problem that error messages did not show when the comment could not be saved

--- a/app/views/comments/new.js.erb
+++ b/app/views/comments/new.js.erb
@@ -1,1 +1,1 @@
-$(".add-comment-form").replaceWith("<%= j render 'form' %>");
+$(".add-comment-form").html("<%= j render 'form', obj: @article_comment %>");
