--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -96,6 +96,15 @@ $navbar-default-bg: black;
   margin-bottom: 10px;
 }
 
+.comment {
+  border-bottom: 1px solid #eaeaea;
+}
+
+.comment-button {
+  letter-spacing: 0px;
+  font-size: .6em;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
