--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,7 +8,8 @@
           <div class="comment-buttons">
             <!-- <%= link_to "Edit comment", edit_comment_path(comment),
                                               class: "comment-button btn-xs btn-primary" %> -->
-            <%= link_to "Delete comment", comment_path(comment),
+            <%= button_to "Delete comment", comment_path(comment),
+                                                remote: true,
                                                 method: :delete,
                                                 class: "comment-button btn-xs btn-danger" %>
           </div>
