add form_class for button_to and change display to be inline, now delete and edit buttons are on the same line

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -12,6 +12,7 @@
             <%= button_to "Delete comment", comment_path(comment),
                                                 remote: true,
                                                 method: :delete,
+                                                form_class: 'form',
                                                 class: "comment-button btn-xs btn-danger" %>
           </div>
           <% end %>
