--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -105,6 +105,11 @@ $navbar-default-bg: black;
   font-size: .6em;
 }
 
+.form {
+  display: inline;
+  font-size: .8em;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
