--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,12 +8,12 @@
           <div class="comment-buttons">
             <%= link_to "Edit comment", edit_comment_path(comment),
                                               remote: true,
-                                              class: "comment-button btn-xs btn-primary" %>
+                                              class: "comment-button btn btn-xs btn-primary" %>
             <%= button_to "Delete comment", comment_path(comment),
                                                 remote: true,
                                                 method: :delete,
                                                 form_class: 'form',
-                                                class: "comment-button btn-xs btn-danger" %>
+                                                class: "comment-button btn btn-xs btn-danger" %>
           </div>
           <% end %>
           <li><small class="comment-meta-details">Commented by <%= link_to "#{User.find(comment.user_id).username}", user_path(User.find(comment.user_id))%> at <%= comment.updated_at.localtime.strftime('%m-%e-%y %H:%M') %></small></li>
