--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,7 +12,7 @@
 
       <div class="form-group">
         <div class="col-sm-10">
-          <%= f.submit class: "btn btn-primary" %>
+          <%= f.submit 'Add Comment', class: "btn btn-primary" %>
         </div>
       </div>
     <% end %>
