--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -105,6 +105,12 @@ $navbar-default-bg: black;
   border-bottom: 1px solid #eaeaea;
 }
 
+.add-comment-form {
+  border-bottom: 1px solid #eaeaea;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+}
+
 .comment-button {
   letter-spacing: 0px;
   font-size: .6em;
