--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -23,7 +23,7 @@
   </div>
 
   <% if @article.categories.any? %>
-    <p><strong>Categories:</strong> <%= render @article.categories %></p>
+    <p class="categories"><strong>Categories:</strong> <%= render @article.categories %></p>
   <% end %>
   <div class="article-actions">
     <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
