--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
     <%= gravatar_for @user, size: 150 %>
   </div>
 </div>
-<h4 align="center"><%= @user.username %>'s articles</h4>
+<h4 align="center"><%= @user.username %>'s <%= pluralize(@user.articles.count, 'article') if @user.articles %></h4>
 <div align="center">
   <%= will_paginate @user_articles  %>
 </div>
